--- a/EntityComponentSystem(ECS)/EntityComponentSystem(ECS)/EntityComponentSystem(ECS).vcxproj.filters
+++ b/EntityComponentSystem(ECS)/EntityComponentSystem(ECS)/EntityComponentSystem(ECS).vcxproj.filters
@@ -18,6 +18,12 @@
     <ClCompile Include="main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="RenderSystem.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="AISystem.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="EntityComponent.h">
@@ -36,6 +42,12 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="PositionSystem.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="RenderSystem.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="AISystem.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
